--- a/en.marches.html
+++ b/en.marches.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,28 +17,28 @@
             <div class="container">
                 <div class="menu d-flex">
                     <figure>
-                        <a href="index.html">
+                        <a href="en.index.html">
                             <img src="img/logo.svg" alt="Logo">
                         </a>
                     </figure>
                     <nav class="nav">
                         <ul class="d-flex" id="navigation">
                             <li>
-                                <a href="index.html">Accueil</a>
+                                <a href="en.index.html">Home</a>
                             </li>
                             <li>
-                                <a href="lieux.html">Lieux</a>
+                                <a href="en.lieux.html">Places</a>
                             </li>
                             <li>
-                                <a href="marches.html" class="forced">Marchés & foires</a>
+                                <a href="en.marches.html" class="forced">Local markets</a>
                             </li>
                             <li>
-                                <a href="actualites.html">Actualités</a>
+                                <a href="en.actualites.html">News</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="lang d-flex" id="lang">
-                        <a href="#" class="active">FR</a> <span>/</span> <a href="en.marches.html">EN</a>
+                        <a href="marches.html">FR</a> <span>/</span> <a href="#" class="active">EN</a>
                     </div>
                     <div class="burger hidden" id="burger">
                         <div class="burger__layer"></div>
@@ -52,7 +52,7 @@
         <section id="slogan">
             <div class="container">
                 <div class="slogan__text">
-                    <h3>Vaucluse : On a tous besoin de couleurs</h3>
+                    <h3>Vaucluse : We are all in need of colors</h3>
                 </div>
             </div>
         </section>
@@ -60,7 +60,7 @@
     <main>
         <section class="marches">
             <div class="container">
-                <h2>Marchés & foires de vaucluse</h2>
+                <h2>Local markets of Vaucluse</h2>
                 <div class="marches__wrapper d-flex">
                     <div class="marches__card">
                         <img src="img/marche01.jpg" alt="Les Halles">
@@ -71,19 +71,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>lundi</li>
-                                        <li>mardi - vendredi</li>
-                                        <li>samedi - dimanche</li>
+                                        <li>Monday</li>
+                                        <li>Tuesday - Friday</li>
+                                        <li>Saturday - Sunday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                         <li>6h - 14h</li>
                                         <li>6h - 13h</li>
                                     </ul>
                                 </div>
-                                <a href="https://www.google.com/maps/place/Les+Halles+d'Avignon/@43.9476197,4.8080343,17z/data=!3m2!4b1!5s0x12b5eb87fdbf2bfb:0xd6e6ff51567a6a83!4m5!3m4!1s0x12b5eb87f12bc2b5:0xab245fa1f8797383!8m2!3d43.9476159!4d4.810223" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://www.google.com/maps/place/Les+Halles+d'Avignon/@43.9476197,4.8080343,17z/data=!3m2!4b1!5s0x12b5eb87fdbf2bfb:0xd6e6ff51567a6a83!4m5!3m4!1s0x12b5eb87f12bc2b5:0xab245fa1f8797383!8m2!3d43.9476159!4d4.810223" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -96,19 +96,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>jeudi, dimanche</li>
-                                        <li>lundi, mardi, mercredi</li>
-                                        <li>vendredi, samedi</li>
+                                        <li>Thursday, Sunday</li>
+                                        <li>Monday - Wednesday</li>
+                                        <li>Frday - Saturday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
                                         <li>6h - 14h</li>
-                                        <li>fermé</li>
-                                        <li>fermé</li>
+                                        <li>closed</li>
+                                        <li>closed</li>
                                     </ul>
                                 </div>
-                                <a href="https://www.google.com/maps/place/L'Isle-sur-la-Sorgue+Market/@43.9192068,5.0517626,17z/data=!3m1!4b1!4m5!3m4!1s0x12b5f5f0c797fcf1:0x8ae66ba993a572ce!8m2!3d43.919203!4d5.0539513" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://www.google.com/maps/place/L'Isle-sur-la-Sorgue+Market/@43.9192068,5.0517626,17z/data=!3m1!4b1!4m5!3m4!1s0x12b5f5f0c797fcf1:0x8ae66ba993a572ce!8m2!3d43.919203!4d5.0539513" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -121,19 +121,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>dimanche - jeudi</li>
-                                        <li>vendredi</li>
-                                        <li>samedi</li>
+                                        <li>Sunday - Thursday</li>
+                                        <li>Friday</li>
+                                        <li>Saturday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                         <li>7h - 13h</li>
                                         <li>8h - 12h30</li>
                                     </ul>
                                 </div>
-                                <a href="https://maps.google.com" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://maps.google.com" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -146,19 +146,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>lundi, mardi, jeudi</li>
-                                        <li>mercredi, vendredi</li>
-                                        <li>samedi, dimanche</li>
+                                        <li>Mon - Tuesday, Thursday</li>
+                                        <li>Wednesday, Friday</li>
+                                        <li>Saturday, Sunday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                         <li>8h - 12h30</li>
                                         <li>8h - 12h</li>
                                     </ul>
                                 </div>
-                                <a href="https://maps.google.com" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://maps.google.com" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -171,19 +171,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>jeudi</li>
-                                        <li>vendredi</li>
-                                        <li>samedi - mercredi</li>
+                                        <li>Thursday</li>
+                                        <li>Friday</li>
+                                        <li>Saturday - Wednesday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
                                         <li>17h - 19h</li>
                                         <li>8h - 13h</li>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                     </ul>
                                 </div>
-                                <a href="https://maps.google.com" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://maps.google.com" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -196,19 +196,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>mardi</li>
-                                        <li>samedi</li>
-                                        <li>autres jours</li>
+                                        <li>Tuesday</li>
+                                        <li>Saturday</li>
+                                        <li>other days</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
                                         <li>8h - 13h</li>
                                         <li>8h - 12h30</li>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                     </ul>
                                 </div>
-                                <a href="https://maps.google.com" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://maps.google.com" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -221,19 +221,19 @@
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
-                                        <li>lundi</li>
-                                        <li>mardi</li>
-                                        <li>mercredi - dimanche</li>
+                                        <li>Monday</li>
+                                        <li>Tuesday</li>
+                                        <li>Wednesday - Sunday</li>
                                     </ul>
                                 </div>
                                 <div class="open__hours">
                                     <ul>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                         <li>7h30 - 13h</li>
-                                        <li>fermé</li>
+                                        <li>closed</li>
                                     </ul>
                                 </div>
-                                <a href="https://maps.google.com" class="arrow" target="_blank">Trouver sur la carte <img src="img/arrow-l.svg" alt="Flèche"> </a>
+                                <a href="https://maps.google.com" class="arrow" target="_blank">Find on map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                             </div>
                         </div>
                     </div>
@@ -245,27 +245,27 @@
         <div class="container">
             <div class="footer__wrapper d-flex">
                 <figure>
-                    <a href="index.html">
+                    <a href="en.index.html">
                         <img src="img/logo.svg" alt="Logo">
                     </a>
                 </figure>
                 <nav class="nav">
                     <ul class="d-flex">
                         <li>
-                            <a href="index.html">Accueil</a>
+                            <a href="en.index.html">Home</a>
                         </li>
                         <li>
-                            <a href="lieux.html">Lieux</a>
+                            <a href="en.lieux.html">Places</a>
                         </li>
                         <li>
-                            <a href="marches.html">Marchés & foires</a>
+                            <a href="en.marches.html">Markets</a>
                         </li>
                         <li>
-                            <a href="actualites.html">Actualités</a>
+                            <a href="en.actualites.html">News</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="en.marches.html">English version</a>
+                <a href="marches.html">Version française</a>
             </div>
         </div>
     </footer>
