--- a/en.index.html
+++ b/en.index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <title>VAUCLUSE : on a tous besoin de couleurs</title>
+    <title>VAUCLUSE : we all need colors</title>
 </head>
 <body>
     <div class="index__cover">
@@ -17,28 +17,28 @@
             <div class="container">
                 <div class="menu d-flex">
                     <figure>
-                        <a href="index.html">
+                        <a href="en.index.html">
                             <img src="img/logo.svg" alt="Logo">
                         </a>
                     </figure>
                     <nav class="nav">
                         <ul class="d-flex" id="navigation">
                             <li>
-                                <a href="index.html" class="forced">Accueil</a>
+                                <a href="en.index.html" class="forced">Home</a>
                             </li>
                             <li>
-                                <a href="lieux.html">Lieux</a>
+                                <a href="en.lieux.html">Places to see</a>
                             </li>
                             <li>
-                                <a href="marches.html">Marchés & foires</a>
+                                <a href="en.marches.html">Local markets</a>
                             </li>
                             <li>
-                                <a href="actualites.html">Actualités</a>
+                                <a href="en.actualites.html">News</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="lang d-flex" id="lang">
-                        <a href="index.html" class="active">FR</a> <span>/</span> <a href="en.index.html">EN</a>
+                        <a href="index.html">FR</a> <span>/</span> <a href="en.index.html" class="active">EN</a>
                     </div>
                     <div class="burger hidden" id="burger">
                         <div class="burger__layer"></div>
@@ -52,8 +52,8 @@
         <section id="offer">
             <div class="container">
                 <div class="offer__text d-flex">
-                    <h1>On a tous besoin <br> <span> de couleurs </span> </h1>
-                    <a id="overlayed" href="#decouvrir">Découvrir</a>
+                    <h1>We are all in need <br> <span> of colors</span> </h1>
+                    <a id="overlayed" href="#decouvrir">Discover</a>
                 </div>
             </div>
         </section>
@@ -67,19 +67,19 @@
                     <div class="history__dates d-flex">
                         <div class="history__date">
                             <h3>1789</h3>
-                            <p>La Révolution Française est là !</p>
+                            <p>French revolution: here it is!</p>
                         </div>
                         <div class="history__date">
                             <h3>1790</h3>
-                            <p>Adoption des décrets de la loi du 22 décembre 1789 créant les départements</p>
+                            <p>Adoption of the decrees of the law of December 22, 1789 creating the departments</p>
                         </div>
                         <div class="history__date">
                             <h3>1791</h3>
-                            <p>Vote de la réunion des États pontificaux à la France</p>
+                            <p>Vote of the meeting of the Papal States in France</p>
                         </div>
                         <div class="history__date">
                             <h3>1793</h3>
-                            <p>Naissance officielle du département du Vaucluse</p>
+                            <p>Official birth of the Vaucluse Department</p>
                         </div>
                     </div>
                 </div>
@@ -87,19 +87,19 @@
                     <div class="history__dates d-flex">
                         <div class="history__date">
                             <h3>1800</h3>
-                            <p>Chaque département se voit doté d’un préfet</p>
+                            <p>Each department is attributed a prefect</p>
                         </div>
                         <div class="history__date">
                             <h3>1871</h3>
-                            <p>Le département devient une collectivité territoriale</p>
+                            <p>The department becomes a territorial collectivity</p>
                         </div>
                         <div class="history__date">
                             <h3>1982-<br>2008</h3>
-                            <p>Les lois de décentralisation accordent une autonomie sans précédent aux départements et élargissent leurs compétences</p>
+                            <p>Decentralization laws grant unprecedented autonomy to departments and expand their powers</p>
                         </div>
                         <div class="history__date">
                             <h3>2015</h3>
-                            <p>Le Conseil départemental (et non plus le conseil général) dirige le Département</p>
+                            <p>The Departmental Council (and no longer the General Council) directs the Department</p>
                         </div>
                     </div>
                     <img src="img/histoire02.jpg" alt="Panoramique sur Gordes">
@@ -108,37 +108,37 @@
         </section>
         <section id="geoposition">
             <div class="container">
-                <h2>où se situe le 84 ? </h2>
+                <h2>Where is the 84<sup style="font-size: 20px;">th</sup>  situated?</h2>
                 <div class="geoposition__wrapper d-flex">
-                    <img src="img/carte4.png" alt="Carte de France">
+                    <img src="img/en.carte4.png" alt="Carte de France">
                     <p>
-                        Le département de Vaucluse fait partie de la région Provence-Alpes-Côte d'Azur, région située au sud-est de la France. Il est limitrophe des départements du Gard à l'ouest, de l'Ardèche au nord-ouest, de la Drôme au nord, des Alpes-de-Haute-Provence à l'est, du Var et des Bouches-du-Rhône au sud. <br><br>
-                        Le Vaucluse possède également au Nord une partie, le canton de Valréas, entièrement enclavée dans la Drôme. <br><br> 
-                        Le département de Vaucluse est soumis à différents types de climats. En effet, son emplacement géographique particulier le place à un point de rencontre entre trois des quatre climats majeurs de France : le climat méditerranéen pour sa partie sud, le climat montagnard pour sa partie nord-est avec le relief élevé des Monts de Vaucluse et du massif des Baronnies et enfin une influence toute relative du climat semi-continental pour sa partie nord-ouest.<br><br>
-                        Le Vaucluse est également connu pour ses mistrales. En 1967, un vent soufflant à 320 km/h a été enregistré au sommet du Mont Ventoux. Il s'agit de l'un des records de grande vitesse de vent enregistré en France métropolitaine.<br><br>
+                        The Vaucluse department is part of the Provence-Alpes-Côte d'Azur region, a region located in the south-east of France. It borders the departments of Gard in the west, Ardèche in the north-west, Drôme in the north, Alpes-de-Haute-Provence in the east, Var and Bouches-du-Rhône in the South. <br><br>
+                        Vaucluse also has a part in the north, the canton of Valréas, entirely enclosed in the Drôme.<br><br> 
+                        The department of Vaucluse is subject to different types of climates. Indeed, its particular geographical location places it at a meeting point between three of the four major climates of France: the Mediterranean climate for its southern part, the mountain climate for its north-eastern part with the high relief of the Monts de Vaucluse and the Massif des Baronnies and finally a very relative influence of the semi-continental climate for its north-western part.<br><br>
+                        Vaucluse is also known for its mistrals. In 1967, a wind blowing at 320 km / h was recorded at the top of Mont Ventoux. This is one of the high wind speed records recorded in mainland France.<br><br>
                     </p>
                 </div>
             </div>
         </section>
         <section id="decouvrir">
             <div class="container">
-                <h2>Découvrir vaucluse</h2>
+                <h2>Discover Vaucluse</h2>
                 <div class="decouvrir__wrapper d-flex">
                     <a href="lieux.html">
                         <img src="img/decouvrir01.jpg" alt="Lieux incountournables">
-                        <h3>Lieux incountournables</h3>
+                        <h3>Places you should not miss</h3>
                     </a>
                     <a href="marches.html">
                         <img src="img/decouvrir02.jpg" alt="Marchés & foires">
-                        <h3>Marchés & foires</h3>
+                        <h3>Local markets</h3>
                     </a>
                     <a href="actualites.html">
                         <img src="img/decouvrir03.jpg" alt="Actualités">
-                        <h3>Actualités</h3>
+                        <h3>News</h3>
                     </a>
                     <a href="#history">
                         <img src="img/decouvrir04.jpg" alt="Histoire du département">
-                        <h3>Histoire du département</h3>
+                        <h3>History of the department</h3>
                     </a>
                 </div>
             </div>
@@ -148,27 +148,27 @@
         <div class="container">
             <div class="footer__wrapper d-flex">
                 <figure>
-                    <a href="index.html">
+                    <a href="en.index.html">
                         <img src="img/logo.svg" alt="Logo">
                     </a>
                 </figure>
                 <nav class="nav">
                     <ul class="d-flex">
                         <li>
-                            <a href="index.html">Accueil</a>
+                            <a href="en.index.html">Home</a>
                         </li>
                         <li>
-                            <a href="lieux.html">Lieux</a>
+                            <a href="en.lieux.html">Places</a>
                         </li>
                         <li>
-                            <a href="marches.html">Marchés & foires</a>
+                            <a href="en.marches.html">Markets</a>
                         </li>
                         <li>
-                            <a href="actualites.html">Actualités</a>
+                            <a href="en.actualites.html">News</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="en.index.html">English version</a>
+                <a href="index.html">Version Française</a>
             </div>
         </div>
     </footer>
