english translation correction

--- a/en.index.html
+++ b/en.index.html
@@ -61,7 +61,7 @@
     <main>
         <section id="history">
             <div class="container">
-                <h2>Histoire du département</h2>
+                <h2>History of the department</h2>
                 <div class="history__wrapper d-flex">
                     <img src="img/histoire01.jpg" alt="Panoramique sur Gordes">
                     <div class="history__dates d-flex">
