--- a/en.lieux.html
+++ b/en.lieux.html
@@ -65,7 +65,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux01.jpg" alt="Palais des Papes">
                         <div class="lieux__text-wrapper">
-                            <h4>Palais des Papes</h4>
+                            <h4>The Popes' Palace</h4>
                             <p class="light">In Avignon there are several sites to see, among them - the magnificent 14th century Gothic palace, former fortress and palace of the popes, one of the most visited French monuments. </p>
                             <a href="https://www.google.com/maps/place/Palais+des+Papes/@43.9508559,4.8055084,17z/data=!3m1!4b1!4m5!3m4!1s0x12b5eb868edbf86f:0x778ce565c188d2cb!8m2!3d43.9508521!4d4.8076971" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -73,7 +73,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux02.jpg" alt="Le Mont Ventoux">
                         <div class="lieux__text-wrapper">
-                            <h4>Le Mont Ventoux</h4>
+                            <h4>The Mont Ventoux</h4>
                             <p class="light">Absolutely unmissable site when visiting Vaucluse, Mont Ventoux is a majestic summit which rises to an altitude of 1,910 meters. </p>
                             <a href="https://www.google.com/maps/place/Mt+Ventoux/@44.1740997,5.2699249,15z/data=!3m1!4b1!4m5!3m4!1s0x12ca645aaf6f7367:0xd3f24ac5c0a1bcd!8m2!3d44.1740851!4d5.2786797" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -81,7 +81,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux03.jpg" alt="Pont Saint-Bénézet">
                         <div class="lieux__text-wrapper">
-                            <h4>Pont Saint-Bénézet</h4>
+                            <h4>Saint-Bénézet Bridge</h4>
                             <p class="light">The famous Avignon bridge known thanks to the song. Listed as a UNESCO World Heritage Site, it was partly destroyed, and of the 22 original arches, only 4 remain.</p>
                             <a href="https://www.google.com/maps/place/Pont+d'Avignon/@43.953856,4.8026894,17z/data=!3m1!4b1!4m5!3m4!1s0x12b5eb825fa84051:0x7b72f2b877bc1976!8m2!3d43.9538522!4d4.8048781" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux06.jpg" alt="Le Colorado Provençal">
                         <div class="lieux__text-wrapper">
-                            <h4>Le Colorado Provençal</h4>
+                            <h4>The Colorado Provençal</h4>
                             <p class="light">An outdoor activity to do in the Vaucluse. The landscapes and colors of the site will not leave you indifferent. This Historic Monument is an old ocher quarry.  </p>
                             <a href="https://www.google.com/maps/place/The+Proven%C3%A7al+Colorado/@43.9199146,5.4969,17z/data=!3m1!4b1!4m5!3m4!1s0x12ca39371a3de879:0x2bdf9bc216db7e00!8m2!3d43.9199108!4d5.4990887" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -105,7 +105,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux04.jpg" alt="Les champs de lavande">
                         <div class="lieux__text-wrapper">
-                            <h4>Les champs de lavande</h4>
+                            <h4>Lavender fields</h4>
                             <p class="light">Lavender fields are emblematic of Provence. Usually from mid-June to early August (may vary depending on the weather) lavender is in bloom. </p>
                             <a href="https://www.google.com/maps/place/84220+Gordes/@43.9075344,5.1339934,12z/data=!3m1!4b1!4m5!3m4!1s0x12ca0dc30dc4b6cd:0x6cf8370fce926027!8m2!3d43.911315!4d5.200176" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -113,7 +113,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux09.jpg" alt="L’abbaye de Sénanque">
                         <div class="lieux__text-wrapper">
-                            <h4>L’abbaye de Sénanque</h4>
+                            <h4>Sénanque Abbey</h4>
                             <p class="light">Sénanque Abbey, founded in 1148, is located in the town of Gordes. It is still occupied by monks who cultivate lavandin and olive trees on their land. </p>
                             <a href="https://www.google.com/maps/place/Abbaye+Notre-Dame+de+S%C3%A9nanque/@43.9285565,5.1845451,17z/data=!4m9!1m2!2m1!1zTOKAmWFiYmF5ZSBkZSBTw6luYW5xdWU!3m5!1s0x12ca0db2e33c18bb:0x47ca1205ef3ceca0!8m2!3d43.9281097!4d5.1871889!15sChdM4oCZYWJiYXllIGRlIFPDqW5hbnF1ZVoXIhVsIGFiYmF5ZSBkZSBzw6luYW5xdWWSAQVhYmJleZoBI0NoWkRTVWhOTUc5blMwVkpRMEZuU1VSM2FYSlBSVVZCRUFF" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
@@ -129,7 +129,7 @@
                     <div class="lieux__card">
                         <img src="img/lieux05.jpg" alt="Vignobles du Vaucluse">
                         <div class="lieux__text-wrapper">
-                            <h4>Vignobles du Vaucluse</h4>
+                            <h4>Vaucluse Wineries</h4>
                             <p class="light">Viticulture is very important in the Vaucluse, being one of the main agricultural activities. It is possible to make a route with the areas open to visitors.</p>
                             <a href="https://www.google.com/maps/search/Vignobles+du+Vaucluse/@44.1795298,5.0255365,13z/data=!3m1!4b1" class="arrow" target="_blank"> On map <img src="img/arrow-l.svg" alt="Flèche"> </a>
                         </div>
