--- a/en.marches.html
+++ b/en.marches.html
@@ -67,7 +67,7 @@
                         <div class="marches__text">
                             <h4>Les Halles</h4>
                             <p class="light">Place Pie, Avignon</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -92,7 +92,7 @@
                         <div class="marches__text">
                             <h4>Marché Provençal de l’Isle-sur-la-Sorgue</h4>
                             <p class="light">Quai Jean Jaurès, L'Isle-sur-la-Sorgue</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -117,7 +117,7 @@
                         <div class="marches__text">
                             <h4>Le marché de Châteauneuf-du-Pape</h4>
                             <p class="light">Place de la Renaissance, Châteauneuf-du-Pape</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -142,7 +142,7 @@
                         <div class="marches__text">
                             <h4>Marché de Carpentras</h4>
                             <p class="light">Les allées Jean Jaurès, Carpentras</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -167,7 +167,7 @@
                         <div class="marches__text">
                             <h4>Marché de Cavaillon</h4>
                             <p class="light">Place des Fêtes, Cavaillon</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -192,7 +192,7 @@
                         <div class="marches__text">
                             <h4>Le marché de Beaumes-de-Venise</h4>
                             <p class="light">Avenue Raspail, Beaumes-de-Venise </p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
@@ -217,7 +217,7 @@
                         <div class="marches__text">
                             <h4>Grand marché provençal de Vaison-la-Romaine</h4>
                             <p class="light">Places princiales, Vaison-la-Romaine</p>
-                            <h5>Les horaires d’ouverture :</h5>
+                            <h5>Open hours:</h5>
                             <div class="open__wrapper">
                                 <div class="open__days">
                                     <ul>
