:eyes: links fixed

--- a/en.index.html
+++ b/en.index.html
@@ -125,15 +125,15 @@
             <div class="container">
                 <h2>Discover Vaucluse</h2>
                 <div class="decouvrir__wrapper d-flex">
-                    <a href="lieux.html">
+                    <a href="en.lieux.html">
                         <img src="img/decouvrir01.jpg" alt="Lieux incountournables">
                         <h3>Places you should not miss</h3>
                     </a>
-                    <a href="marches.html">
+                    <a href="en.marches.html">
                         <img src="img/decouvrir02.jpg" alt="Marchés & foires">
                         <h3>Local markets</h3>
                     </a>
-                    <a href="actualites.html">
+                    <a href="en.actualites.html">
                         <img src="img/decouvrir03.jpg" alt="Actualités">
                         <h3>News</h3>
                     </a>
